fixed auto signup issue

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   <title>Digital Twinning</title>
   <meta name="description" content="We build digital transformation products that thrive at the intersection of your business goals and needs.
 ">
-  <meta name="version" content="0.0.9">
+  <meta name="version" content="2.0.9">
   <link rel="manifest" href="manifest.json">
 
   <!-- Browser meta tags & icons -->
@@ -33,7 +33,7 @@
     var serviceWorkerVersion = {{flutter_service_worker_version}};
   </script>
 
-  <script src="flutter.js" defer></script>
+  <script src="flutter.js?version=2.0.9" defer></script>
 </head>
 
 <body>
